# github-policies-automator

./: .editorconfig  .gitignore  CHANGELOG.md  action.yaml  example-config.yaml  pyproject.toml
.changes/: 0.1.0.md  0.2.0.md  v0.1.0.md
.changes/unreleased/: Added-20230421-095853.yaml  Added-20230501-091905.yaml
.github/workflows/: main.yaml  release.yaml
src/ghpolicy/: cli.py  main.py  policy.py
src/ghpolicy/policies/: default_branch.py  repository_settings.py  team_permission.py  topics.py  visibility.py
